# amina

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
amina_core/: Cargo.toml
amina_core/src/: cmd_manager.rs  events.rs  lib.rs  service.rs  settings.rs  tasks.rs
amina_core/src/cmd_manager/: cli_adapter.rs  mod.rs
amina_core/src/rpc/: mod.rs  tcp_client.rs
amina_core_derive/: Cargo.toml
amina_core_derive/src/: events.rs  lib.rs
amina_server/: Cargo.toml
amina_server/src/: lib.rs  rpc_web_gate.rs
amina_server/src/cli/: mod.rs
amina_server/src/cli/adapters/: cmd_manager_adapter.rs  mod.rs
amina_tauri/: Cargo.toml
amina_tauri/src/: lib.rs  rpc_gate.rs
amina_ui/: http_client.js  tauri_client.js
amina_ui/components/commands/: CommandsPane.vue  RunCommandPane.vue
amina_ui/components/settings/: PropertyPane.vue  SettingsPane.vue  SettingsTab.vue
