[package]
name = "amina_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.17"
crossterm = "0.25.0"
clap = "2.34.0"
bincode = "1.3.3"
serde = { version="1.0.151", features=["derive"] }
yaml-rust = "0.4.5"
serde_json = "1.0.89"
threadpool = "1.8.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
thiserror = "1.0.30"
amina_core_derive = { path = "../amina_core_derive" }
