[package]
name = "amina_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.25"
bincode = "1.3.3"
serde = { version="1.0.217", features=["derive"] }
yaml-rust = "0.4.5"
serde_json = "1.0.138"
threadpool = "1.8.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
thiserror = "2.0.11"
amina_core_derive = { path = "../amina_core_derive" }
