[package]
name = "amina_server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
warp = "0.3.7"
bytes = "1.9.0"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.138"
chrono = "0.4.39"
env_logger = "0.11.6"
redox_liner = "0.5.3"
amina_core = { path = "../amina_core" }
